--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
         <meta name="theme-color" content="#000000" />
         <meta name="description" content="Web site created using create-react-app" />
         <link rel="apple-touch-icon" href="/name/logo192.png" />
-        <link rel="manifest" href="/name/manifest.json" />
+        <link rel="manifest" href="./name/manifest.json" />
         <title>React App</title>
-        <script defer="defer" src="/name/static/js/main.03f8cef3.js"></script>
-        <link href="/name/static/css/main.085d5f2b.css" rel="stylesheet" />
+        <script defer="defer" src="./name/static/js/main.03f8cef3.js"></script>
+        <link href="./name/static/css/main.085d5f2b.css" rel="stylesheet" />
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
